--- a/all_work_dashboard.html
+++ b/all_work_dashboard.html
@@ -38,7 +38,7 @@
           },
 
           getUserSettingsFields: function() {
-            return []
+            return [];
           },
 
           onSettingsUpdate: function(settings) {
